--- a/app/assets/stylesheets/polls/main.css
+++ b/app/assets/stylesheets/polls/main.css
@@ -1,4 +1,4 @@
-input['type=checkbox'] {
+input[type="checkbox"] {
 	font-family: 'Lato-Light', sans-serif;
     color: #232323;
     font-size: 22px;
