--- a/app/views/clients/campaigns/partials/_poll_template.ng.html.haml
+++ b/app/views/clients/campaigns/partials/_poll_template.ng.html.haml
@@ -5,3 +5,45 @@
 			%span.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "choice.label", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Poll Option {{$index + 1}}", "name"=>"poll_choice", "required"=>""}
 			%span{"ng-click"=>"remove_poll_choice_clicked(choice)", "ng-hide"=>"!isAdmin"}
 				%i.fa.fa-minus-circle
+	#action-wrapper{:style => "margin-top: 40px;"}
+		#sign-panel{:style => "margin: 20px 0px 40px 0px"}
+			#sign-petition-signature
+				#signature-container{"data-facebook" => Settings.facebook_app_id }
+					#sign-why.solid-white-back{:style => "text-align: left;"}
+						%textarea#comment{:maxlength => "115", :style => "width: 90%", :placeholder => "{{page.content.signature_comment_placeholder_text || 'Tell Us Why You are Voting...'}}", "ng-model" => "action_response.comment"}
+						#message-counter.text-right {{115 - action_response.comment.length}}
+					%button.drop-shadow.lifted.action-button.icon#sign-with-fb-button{"ng-click" => "fetch()"}
+						%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.sign_with_facebook_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_facebook_cta_button_text", "required"=>""}
+				#copy-or
+					\-OR-
+				%form{:name => "myForm", "novalidate" => true, :style => "margin: 0px;", "role"=>"form"}
+					.form-group.row
+						.col-md-6
+							%input#firstName.register-textfield.form-control{:type => "text", :name => "FirstName", :placeholder => "First Name", "ng-model" => "action_response.first_name"}
+							.text-error.text-left{"ng-show" => "myForm.submitted  && myForm.FirstName.$invalid"}
+								First Name is required  
+						.col-md-6
+							%input#lastName.register-textfield.form-control{:type => "text", :name => "LastName", :placeholder => "Last Name", "ng-model" => "action_response.last_name"}
+							.text-error.text-left{"ng-show" => "myForm.submitted  && myForm.LastName.$invalid"}
+								Last Name is required  
+					.form-group.row
+						.col-md-6
+							%input#emailAddress.register-textfield.form-control{:type => "email", :name => "EmailAddress", :placeholder => "Email Address", "ng-model" => "action_response.email_address"}
+							.text-error.text-left{"ng-show" => "myForm.submitted  && myForm.EmailAddress.$invalid && myForm.EmailAddress.$error.required"}
+								Email Address is required  
+							.text-error.text-left{"ng-show" => "myForm.submitted  && myForm.EmailAddress.$invalid && myForm.EmailAddress.$error.email"}
+								This is not a valid Email Address
+						.col-md-6
+							%input#zipCode.register-textfield.form-control{:type => "text", :name => "ZipCode", :placeholder => "Zip Code", "ng-model" => "action_response.zip_code"}
+							.text-error.text-left{"ng-show" => "myForm.submitted  && myForm.ZipCode.$invalid"}
+								Zip Code is required  
+					.form-group.row
+						.col-md-12
+							%button#sign-petition-user-name.button.action-button{:type=>"submit", :style => "width: 100%", "ng-click" => "sign_with_email_address(myForm)"}
+								%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.sign_with_email_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_email_cta_button_text", "required"=>""}
+							.controls{:style => "padding: 0px 20px"}
+								%label.checkbox{:style => "text-align: left"}
+									%input#chkEmailSignUp{:checked => "", :type => "checkbox", "ng-model" => "action_response.opt_in"}
+										%div#copy-opt-in
+											Update me on the results of this campaign and others from
+											%b {{petition.creator.organization_name}}
