--- a/app/views/client_views/layout1/segments/tweet-action.html.haml
+++ b/app/views/client_views/layout1/segments/tweet-action.html.haml
@@ -1,20 +1,2 @@
-#action-wrapper.segment-wrapper{"segment-config"=>"", "segment"=>"segment", "is-admin"=>"isAdmin"}
-  .segment-inner-wrapper{:style => "margin: 20px 0px 40px 0px", "ng-switch"=>"isAdmin"}
-    %form{"ng-switch-when"=>"false", "name"=>"tweet_form", "novalidate"=>"", "ng-class"=>"form_styling()", "role"=>"form"}
-      #share-comment.drop-shadow-full.solid-white-back.text-left
-        %textarea.form-control{:style=>"width: 96%", "rows"=>"5", "name"=>"tweet", "ng-model"=>"tweet.message", :maxlength => "115", "required"=>""}
-        #message-counter.text-right {{115 - tweet.length}}
-      %button#deliver-signature.action-button.icon{"ng-click" => "deliver_action(tweet_form)"}
-        %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "segment.delivery_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Button Text"}
-      .text-center
-        %button.btn.btn-link{"ng-click" => "skip_delivery()"}
-          Not Right Now
-    %div{"ng-switch-when"=>"true"}
-      #share-comment.drop-shadow-full.solid-white-back.text-left
-        .contenteditable.placeholder-showing.text-left{:style=>"height: 120px", "contenteditable"=>"", "ng-model"=>"segment.default_tweet_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Default Tweet Message"}
-        #message-counter.text-right {{115 - tweet.length}}
-      %button#deliver-signature.action-button.icon{"ng-click" => "deliver_action(tweet_form)"}
-        %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "segment.delivery_call_to_action_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Call to Action Button Text"}
-      .text-center
-        %button.btn.btn-link{"ng-click" => "skip_delivery()"}
-          %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "segment.delivery_skip_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Skip Button Text"}
+%div{"segment-config"=>"", "segment"=>"segment", "is-admin"=>"isAdmin"}
+  %div{"ng-tweet"=>"", "segment"=>"segment", "action"=>"action", "content"=>"content", "is-admin"=>"isAdmin"}
