--- a/app/views/campaigns/partials/_poll_template.ng.html.haml
+++ b/app/views/campaigns/partials/_poll_template.ng.html.haml
@@ -1,7 +1,7 @@
 %div.poll
 	%span.contenteditable.placeholer-showing.poll-question{:style=>"display: block", "contenteditable"=>"", "ng-model" => "action.name", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Poll Question/Title", "name"=>"poll_title", "required"=>""}
 	%ul
-		%li.poll-choice{"ng-repeat"=>"choice in action.poll_choices_attributes"}
+		%li.poll-choice{"ng-repeat"=>"choice in action.poll_choices_attributes | orderBy:'position'"}
 			%i.fa{"ng-class"=>"set_poll_choice_icon(choice)", "ng-click"=>"poll_choice_clicked(choice)"}
 			%span.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "choice.label", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Poll Option {{$index + 1}}", "name"=>"poll_choice", "required"=>"", "ng-click"=>"poll_choice_clicked(choice)"}
 			%span{"ng-click"=>"remove_poll_choice_clicked(choice)", "ng-hide"=>"!isAdmin"}
