--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -3,6 +3,7 @@
 = angular_templates '/campaigns/partials'
 = angular_templates '/client_views'
 = angular_templates '/client_views/layout1'
+= angular_templates '/client_views/layout1/templates'
 = angular_templates '/client_views/layout2'
 = angular_templates 'clients/partials'
 
