--- a/app/views/client_views/layout1/segments/poll-results.html.haml
+++ b/app/views/client_views/layout1/segments/poll-results.html.haml
@@ -1,2 +1,2 @@
 %div{"segment-config"=>"", "segment"=>"segment", "is-admin"=>"isAdmin"}
-  %div{"ng-poll-results"=>"", "segment"=>"segment", "action"=>"action", "content"=>"content", "is-admin"=>"isAdmin"}
+  %div{"ng-poll-results"=>"", "campaign"=>"campaign", "segment"=>"segment", "action"=>"action", "content"=>"content", "is-admin"=>"isAdmin"}
