--- a/app/views/client_views/layout1/segments/signature-action.html.haml
+++ b/app/views/client_views/layout1/segments/signature-action.html.haml
@@ -1,71 +1,2 @@
-#action-wrapper.segment-outer-wrapper
-  .segment-wrapper{"segment-config"=>"", "segment"=>"segment", "is-admin"=>"isAdmin"}
-    #sign-panel.segment-inner-wrapper{:style => "margin: 20px 0px 40px 0px"}
-      #sign-petition-signature
-        #signature-container{"data-facebook" => Settings.facebook_app_id, "ctrl-fn"=>"sign_with_facebook(auth)" }
-          #sign-why.solid-white-back{:style => "text-align: left;"}
-            %textarea#comment{:maxlength => "115", :style => "width: 90%", :placeholder => "{{content.signature_comment_placeholder_text || 'Tell Us Why You are Signing...'}}", "ng-model" => "signature.comment"}
-            #message-counter.text-right {{115 - signature.comment.length}}
-          %button.drop-shadow.lifted.action-button.icon#sign-with-fb-button{"ng-click" => "fetch()"}
-            %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "segment.sign_with_facebook_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_facebook_cta_button_text", "required"=>""}
-        %div#copy-or
-          \-OR-
-        #sign-petition{"ng-switch"=>"isAdmin"}
-          %form{"ng-switch-when"=>"false", :name => "myForm", "novalidate" => true, :style => "margin: 0px;", "role"=>"form", "signature"=>""}
-            .form-group.row
-              .col-md-6
-                %input#firstName.register-textfield.form-control{:type => "text", :name => "FirstName", :placeholder => "First Name", "ng-model" => "signature.first_name", "required" => true}
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.FirstName.$invalid"}
-                  First Name is required  
-              .col-md-6
-                %input#lastName.register-textfield.form-control{:type => "text", :name => "LastName", :placeholder => "Last Name", "ng-model" => "signature.last_name", "required" => true}
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.LastName.$invalid"}
-                  Last Name is required  
-            .form-group.row
-              .col-md-6
-                %input#emailAddress.register-textfield.form-control{:type => "email", :name => "EmailAddress", :placeholder => "Email Address", "ng-model" => "signature.email_address", "required" => true}
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.EmailAddress.$invalid && myForm.EmailAddress.$error.required"}
-                  Email Address is required  
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.EmailAddress.$invalid && myForm.EmailAddress.$error.email"}
-                  This is not a valid Email Address
-              .col-md-6
-                %input#zipCode.register-textfield.form-control{:type => "text", :name => "ZipCode", :placeholder => "Zip Code", "ng-model" => "signature.zip_code", "required" => true}
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.ZipCode.$invalid"}
-                  Zip Code is required  
-            .form-group.row
-              .col-md-12
-                %button#sign-petition-user-name.button.action-button{:style => "width: 100%", "ng-click" => "sign_with_email_address(myForm)"}
-                  %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "segment.sign_with_email_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_email_cta_button_text", "required"=>""}
-
-          %div{"ng-switch-when"=>"true"}
-            .form-group.row
-              .col-md-6
-                %input#firstName.register-textfield.form-control{:type => "text", :name => "FirstName", :placeholder => "First Name", "ng-model" => "signature.first_name"}
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.FirstName.$invalid"}
-                  First Name is required  
-              .col-md-6
-                %input#lastName.register-textfield.form-control{:type => "text", :name => "LastName", :placeholder => "Last Name", "ng-model" => "signature.last_name"}
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.LastName.$invalid"}
-                  Last Name is required  
-            .form-group.row
-              .col-md-6
-                %input#emailAddress.register-textfield.form-control{:type => "email", :name => "EmailAddress", :placeholder => "Email Address", "ng-model" => "signature.email_address"}
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.EmailAddress.$invalid && myForm.EmailAddress.$error.required"}
-                  Email Address is required  
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.EmailAddress.$invalid && myForm.EmailAddress.$error.email"}
-                  This is not a valid Email Address
-              .col-md-6
-                %input#zipCode.register-textfield.form-control{:type => "text", :name => "ZipCode", :placeholder => "Zip Code", "ng-model" => "signature.zip_code"}
-                .text-error.text-left{"ng-show" => "myForm.submitted  && myForm.ZipCode.$invalid"}
-                  Zip Code is required  
-            .form-group.row
-              .col-md-12
-                %button#sign-petition-user-name.button.action-button{:style => "width: 100%", "ng-click" => "sign_with_email_address(myForm)"}
-                  %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "segment.sign_with_email_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_email_cta_button_text", "required"=>""}
-                .controls{:style => "padding: 0px 20px"}
-                  %label.checkbox{:style => "text-align: left"}
-                    %input#chkEmailSignUp{:checked => "", :type => "checkbox", "ng-model" => "signature.opt_in", "disabled"=>""}
-                      %div#copy-opt-in
-                        Update me on the results of this campaign and others from
-                        %b
-                          %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "segment.opt_in_copy", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Your Organizations Name", "name"=>"opt_in_copy", "required"=>"", "is-admin"=>"isAdmin"}
+%div{"segment-config"=>"", "segment"=>"segment", "is-admin"=>"isAdmin"}
+  %div{"ng-signature"=>"", "segment"=>"segment", "action"=>"action", "content"=>"content", "is-admin"=>"isAdmin"}
