--- a/app/views/clients/campaigns/partials/_pages.ng.html.haml
+++ b/app/views/clients/campaigns/partials/_pages.ng.html.haml
@@ -1,5 +1,5 @@
-%div
-	%div.panel{:style=>"padding: 50px 40px", "ng-hide"=>"campaign.campaign_pages.length > 0"}
+%div{:style=>"padding: 40px;"}
+	%div.panel{:style=>"margin-top: 60px; padding: 50px 40px", "ng-hide"=>"campaign.campaign_pages.length > 0"}
 		%p{:style=>"margin-bottom: 0px"}
 			Start building your action by adding pages from the right >>
 	%div{:style=>"padding: 40px;"}
