--- a/app/views/clients/campaigns/show.html.haml
+++ b/app/views/clients/campaigns/show.html.haml
@@ -4,6 +4,9 @@
 = angular_templates '/clients/campaigns'
 = angular_templates '/clients/campaigns/partials'
 = angular_templates '/clients/campaigns/partials/includes'
+= angular_templates '/client_views/layout1'
+= angular_templates '/client_views/layout1/templates'
+= angular_templates '/client_views/layout2'
 = angular_templates '/clients/partials'
 = angular_templates '/clients/partials/pages'
 
