--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -197,3 +197,25 @@ ul.page-toolbar li:hover {
     top: 15px;
     right: 15px;
 }
+.poll-choice {
+	font-size: 28px;
+}
+.poll-choice-selected {
+	color: #ff5f00;
+}
+.donation-button-wrapper {
+	padding-left: 0px;
+	padding-right: 0px;
+}
+.donation-segment {
+	margin: 20px auto 40px auto;
+	width: 550px;
+}
+.donation-button {
+	height: 80px;
+	background: #14b9d6;
+	color: white;
+	margin: 5px;
+	line-height: 80px;
+	font-size: 24px;
+}
