refactored add/remove poll options

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -203,6 +203,9 @@ ul.page-toolbar li:hover {
 .poll-choice-selected {
 	color: #ff5f00;
 }
+.poll-choice-icons {
+	font-size: 24px;
+}
 .donation-button-wrapper {
 	padding-left: 0px;
 	padding-right: 0px;
