--- a/app/assets/stylesheets/layouts/layout1.css.scss
+++ b/app/assets/stylesheets/layouts/layout1.css.scss
@@ -166,11 +166,11 @@
         min-height: 100px;
         padding: 20px 10%;
         width: 100%;
-        background: -webkit-gradient(linear, left top, left bottom, from(#dddddd), to(#dddddd));
-        background: -moz-linear-gradient(top,  #dddddd,  #dddddd);
-        filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#dddddd');
         color: #fff;
-        font-size: 2.5em;
+        background: -webkit-gradient(linear, left top, left bottom, from(#13b6e5), to(#0c9dcb));
+        background: -moz-linear-gradient(top,  #13b6e5,  #0c9dcb);
+        filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#13b6e5', endColorstr='#0c9dcb');
+        font-size: 1.8em;
         line-height: 1;
         font-family: 'Lato-Light', sans-serif;
     }
@@ -180,13 +180,14 @@
     #deliver-signature {
         margin: 0px auto 10px auto;   
     }
+    /*
     #sign-with-fb-button span:before {
         font-family: "FontAwesome";
         content: "\f09a";
         margin-right: 20px;
         color: #ffffff;
         font-size: 1.15em;
-    }
+    }*/
     #sign-petition-user-name {
         font-size: 1.4em;
         font-family: 'Lato-Light', sans-serif;
