--- a/app/views/client_views/layout1/templates/_action_guage_template.ng.html.haml
+++ b/app/views/client_views/layout1/templates/_action_guage_template.ng.html.haml
@@ -12,9 +12,9 @@
           \%
     .row
       .col-md-6.col-sm-6.col-xs-6.action-count{:style => "text-align: left; padding-left: 22px;"}
-        Signers:
+        %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.action_label", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Action Label","name"=>"responders_label", "required"=>""}:
         %span#signature_count
           {{action.count}}
       .col-md-6.col-sm-6.col-xs-6.action-count{:style => "text-align: right; padding-right: 44px"}
-        Goal: 
+        %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.target_label", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Target Label","name"=>"target_label", "required"=>""}:
         %span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.target_count", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Target Number of Signatures","name"=>"target_count", "required"=>""}
