--- a/app/views/client_views/layout1/templates/_poll_template.ng.html.haml
+++ b/app/views/client_views/layout1/templates/_poll_template.ng.html.haml
@@ -14,8 +14,8 @@
 					#sign-why.solid-white-back{:style => "text-align: left;"}
 						%textarea#comment{:maxlength => "115", :style => "width: 90%", :placeholder => "{{page.content.signature_comment_placeholder_text || 'Tell Us Why You are Voting...'}}", "ng-model" => "action_response.comment"}
 						#message-counter.text-right {{115 - action_response.comment.length}}
-					%button.drop-shadow.lifted.action-button.icon#sign-with-fb-button{"ng-click" => "fetch()"}
-						%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.sign_with_facebook_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_facebook_cta_button_text", "required"=>""}
+					%button.button.drop-shadow.lifted.action-button.icon#sign-with-fb-button{"ng-click" => "fetch()"}
+						%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.sign_with_facebook_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action (Facebook)", "name"=>"sign_with_facebook_cta_button_text", "required"=>""}
 				#copy-or
 					\-OR-
 				%form{:name => "myForm", "novalidate" => true, :style => "margin: 0px;", "role"=>"form"}
@@ -42,7 +42,7 @@
 					.form-group.row
 						.col-md-12
 							%button#sign-petition-user-name.button.action-button{:type=>"submit", :style => "width: 100%", "ng-click" => "sign_with_email_address(myForm)"}
-								%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.sign_with_email_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action Text", "name"=>"sign_with_email_cta_button_text", "required"=>""}
+								%span.contenteditable.placeholder-showing{"contenteditable"=>"", "ng-model" => "content.sign_with_email_cta_button_text", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Call to Action (Email)", "name"=>"sign_with_email_cta_button_text", "required"=>""}
 							.controls{:style => "padding: 0px 20px"}
 								%label.checkbox{:style => "text-align: left"}
 									%input#chkEmailSignUp{:checked => "", :type => "checkbox", "ng-model" => "action_response.opt_in"}
