refactored some poll stuff

--- a/app/views/clients/campaigns/partials/_image_upload_overlay.ng.html.haml
+++ b/app/views/clients/campaigns/partials/_image_upload_overlay.ng.html.haml
@@ -11,5 +11,5 @@
 	%p.note
 		{{notes}}
 .modal-footer
-	%button.btn.btn-primary{"ng-click"=>"ok()"}
+	%button.btn.btn-primary{"ng-click"=>"ok()", "ng-disabled"=>"!uploadComplete"}
 		Ok
